[package]
name = "minigame"
version = "0.1.0"
authors = [ "Valerio Santinelli <santinelli@gmail.com>" ]
build = "build.rs"

[dependencies]
dynamic_reload = {version = "0.2.1", optional=true}
#sdl2 = { default-features = false, features = ["unsafe_textures"], git = "https://github.com/Rust-SDL2/rust-sdl2.git", branch = "unsafe-textures-feature" }
cgmath = "0.14.1"
rusttype = "0.2.1"
png = "0.7.0"
rand = "*"
log = "0.3.8"
#imgui = "0.0.20"
#stb_image = "0.2.2"
#time = "0.1"
image = "0.21"
glutin = "0.20"

[build-dependencies]
cmake = "0.1.17"
curl = "0.4.2"
gl_generator = "0.5.3"

[features]
hotload = ["dynamic_reload"]
default = ["hotload"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.4", default-features = false }

[target.'cfg(target_os="ios")'.dependencies]
objc = "0.2.6"

[lib]
name = "minigame"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"
