[package]
name = "minigame"
version = "0.1.0"
authors = [ "Valerio Santinelli <santinelli@gmail.com>" ]
build = "build.rs"

[dependencies]
#sdl2 = { version = "0.32", default-features = false, features = ["unsafe_textures"] }
bit-set = "0.5.1"
bitflags = "*"
sdl2 = { path="../tanis2000-rust-sdl2", default-features = false, features = ["unsafe_textures"] }
cgmath = "0.14.1"
rusttype = "0.2.1"
png = "0.7.0"
log = "0.3.8"
image = { version = "0.21.2", default-features = false, features = ["jpeg", "ico", "png_codec", "webp", "jpeg_rayon"] }
tiled = "0.7.2"
tiled-json-rs = { path="../Santinelli-tiled-json-rs" }
serde_json = "1.0.2"
serde_derive = "1.0.11"
serde = "1.0.11"

#imgui = "0.0.20"
#stb_image = "0.2.2"
#time = "0.1"

[build-dependencies]
cmake = "0.1.17"
curl = "0.4.20"
gl_generator = "0.5.3"

[features]
hotload = ["dynamic_reload"]
default = ["hotload"]

[target.'cfg(target_arch="android")'.dependencies]
jni = { version = "0.4", default-features = false }

[target.'cfg(target_arch="wasm32")'.dependencies]
#rand = { version = "0.6", features = ["stdweb" , "wasm-bindgen"] }
rand = { version = "0.6", features = ["stdweb"] }
stdweb = "0.4.17"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rand = "0.6"
dynamic_reload = {version = "0.2.1", optional=true}

[lib]
name = "minigame"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"
